--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>kekayan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/DevAnouar-FT/resume/f4356896d98a5f30afc342de771ff58845b6bd8c/resume-anouar-bellakha-senior-fe.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/DevAnouar-FT/resume/f4356896d98a5f30afc342de771ff58845b6bd8c/resume-anouar-bellakha-senior-fe.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
